--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/content": "^2.7.0",
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0-rc.1",
     "@nuxtjs/color-mode": "^3.3.0",
@@ -16,5 +17,11 @@
     "@types/node": "^18",
     "nuxt": "^3.6.1",
     "nuxt-icon": "^0.4.2"
+  },
+  "dependencies": {
+    "frontmatter-markdown-loader": "^3.7.0",
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-container": "^3.0.0"
   }
 }
